# roylib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  roy.h
array/: royarray.c  royarray.h  royqueue.c  royqueue.h  roystack.c  roystack.h  royvector.c  royvector.h
hash/: hash.c  hash.h  royumap.c  royumap.h  royummap.c  royummap.h  royumset.c  royumset.h  royuset.c  royuset.h
include/: roy.h  royarray.c  royarray.h  roydeque.c  roydeque.h  royhash.h  royinit.h  roylist.c  roylist.h  roymap.c  roymap.h  roymmap.c  roymmap.h  roymset.c  roymset.h  roynumber.c  roynumber.h  roypointer.c  roypointer.h  royqueue.c  royqueue.h  royset.c  royset.h  royshell.c  royshell.h  royslist.c  royslist.h  roystack.c  roystack.h  roystr.c  roystr.h  roystring.c  roystring.h  royumap.h  royumset.c  royumset.h  royuset.c  royuset.h  royvector.c  royvector.h  (+1 more)
list/: roydeque.c  roydeque.h  roylist.c  roylist.h  royslist.c  royslist.h
math/: roybit.c  roybit.h  roymath.c  roymath.h  roynumber.c  roynumber.h
src/: royarray.c  royarray.h  roydeque.c  roydeque.h  royhash.c  roylist.c  roylist.h  roymap.c  roymap.h  roymmap.c  roymmap.h  roymset.c  roymset.h  roynumber.c  roypointer.c  royqueue.c  royqueue.h  royset.c  royset.h  royshell.c  royshell.h  royslist.c  royslist.h  roystack.c  roystack.h  roystr.c  roystring.c  roystring.h  royumap.c  royumap.h  royummap.c  royummap.h  royumset.c  royumset.h  royuset.c  royuset.h  royvector.c  royvector.h  shellsort.c
src/trivials/: hash.c  hash.h  royfunction.c  royfunction.h  royinit.h  roynumber.c  roynumber.h  royobject.c  royobject.h  roypair.c  roypair.h  roypointer.h  roystr.c  roystr.h  shellsort.c  shellsort.h
string/: royshell.c  royshell.h  roystr.c  roystr.h  roystring.c  roystring.h
tree/: roymap.c  roymap.h  roymmap.c  roymmap.h  roymset.c  roymset.h  royset.c  royset.h
trivial/: hash.h  royinit.h  roypair.h  roystr.c  roystr.h  shellsort.c
trivials/: roypair.h
util/: rhash.c  rhash.h  rmatch.c  rmatch.h  royinit.h  roymatch.c  roymatch.h  roynumber.c  roynumber.h  roypair.c  royshell.c  royshell.h  roystring.c  roystring.h  rpair.c  rpair.h  rpre.h
